feat；增加高度限制，修复同项目跳转tab颜色不变化的bug

--- a/src/app/cil-tab/cil-tab.component.scss
+++ b/src/app/cil-tab/cil-tab.component.scss
@@ -9,11 +9,18 @@
     position: fixed;
     bottom: 0;
     left: 0;
+    height: 65px;
+    overflow: hidden;
+  }
+  .tab {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
   .tab-icon {
     width: 25px;
     height: 25px;
-    margin: 0 auto 5px;
+    margin: 0 auto;
   }
   .tab>img {
     display: block;
