--- a/src/app/cil-tab/cil-tab.component.scss
+++ b/src/app/cil-tab/cil-tab.component.scss
@@ -2,10 +2,10 @@
   .tab-box {
     width: 100%;
     border-top: 1px solid #EEEEEE;
-    padding: 10px 30px;
+    padding: 10px 0px;
     box-sizing: border-box;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     position: fixed;
     bottom: 0;
     left: 0;
