--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<cil-tab [zIndex]="9999" [background]="color" [defaultSelected]="3" location="push"></cil-tab>
+<cil-tab [zIndex]="9999" [background]="color" [baseUrl]="['https://www.baidu.com', 'https://www.baidu.com', 'https://www.baidu.com', 'https://www.baidu.com', 'https://www.baidu.com']" [defaultSelected]="3" location="push"></cil-tab>
 <router-outlet></router-outlet>
