--- a/src/app/cil-tab/cil-tab.component.scss
+++ b/src/app/cil-tab/cil-tab.component.scss
@@ -15,6 +15,7 @@
   .tab {
     display: flex;
     flex-direction: column;
+    width: 65px;
     justify-content: space-between;
   }
   .tab-icon {
