--- a/src/app/cil-tab/cil-tab.component.html
+++ b/src/app/cil-tab/cil-tab.component.html
@@ -1,10 +1,10 @@
 <div class="cil-tab-wrapper">
   <div class="tab-box" [ngStyle]="{'z-index': zIndex, 'background': background}">
-    <div class="tab" [ngClass]="{'selected': defaultSelected === i + 1}" *ngFor="let item of urlList; index as i" (click)="handleGo(item)">
-      <div class="tab-icon">
+    <div class="tab" [ngClass]="{'selected': defaultSelected === i + 1}" *ngFor="let item of urlList; index as i">
+      <div class="tab-icon" (click)="handleGo(item)">
         <img [src]="item.icon" alt="">
       </div>
-      <div class="name">{{item.name}}</div>
+      <div class="name" (click)="handleGo(item)">{{item.name}}</div>
     </div>
   </div>
 </div>
